--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 <body class="dark-mode">
 
   <!-- 🔁 Video Background -->
-  <video autoplay muted loop id="bgVideo">
-    <source src="Video.mp4" type="video/mp4" />
+  <video id="bgVideo" autoplay muted loop playsinline>
+    <source src="Video.mp4" type="video/mp4">
   
   </video>
+  
   
 
 
