--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <!-- 🔁 Video Background -->
   <video id="bgVideo" autoplay muted loop playsinline>
     <source src="Video.mp4" type="video/mp4">
-  
+    <img src="picture.jpg" alt="Background" class="fallback-image" />
+  </div>
   </video>
   
   
